Try adding theme
Testing to see if I can get a hold of the theme in the dropdown
menu.

--- a/docs/book.toml
+++ b/docs/book.toml
@@ -9,7 +9,7 @@ build-dir = "book"
 create-missing = false
 
 [output.html]
-theme = "tomorrow-night"
+theme = "gameboy"
 default-theme = "light"
 preferred-dark-theme = "navy"
 curly-quotes = true
